--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-mixin": "^2.0.2",
+    "react-responsive": "^3.0.0",
     "react-router-dom": "^4.2.2",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
