--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack-dev-server": "^2.9.3"
   },
   "devDependencies": {
-    "babel-plugin-import": "^1.0.1"
+    "babel-plugin-import": "^1.0.1",
+    "babel-preset-stage-1": "^6.24.1"
   }
 }
